2002-09-03  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/smtpcmds.c:
	    From user feedback (helpdesk manager report to developers,
	    wow...): The "rejection due to MX rule" report needs
	    improved text.  Altered wording, and added client IP address
	    printout into the text.

	* router/prototypes.h, router/rfc822.c, lib/rfc822scan.c:
	    Modifications to header parsing.
	    - An all-white-space line shall be CONTINUATION, not
	      end-of-headers (ancient BITNET card-images are other
	      story, but lets not worry them...)
	    - Altered the makeLetter() function parameters removing
	      a parameter that has not been used for several years.
	    - WorkInProgress: internal changes into  makeLetter()...

	* configure.in, smtpserver/smtpauth.c:
	    Initial configuration hooks for enabling CMU Cyrus Sasl-2.x
	    The code itself is NOT functional as of yet.

2002-09-02  Matti Aarnio  <mea@zmailer.org>

	* router/rfc822.c:
	    Did something wrong, while scrubbed dead code..
	    Detection of header/body (in RFC822 sense) separation
	    fixed.  (Well, not entirely.. there are things which
	    probably SHOULD stay in headers...)

	* transports/libta/diagnostic.c:
	    A beauty-wart in syslog()ed data, when truncking embedded
	    CR containing diagnostic message, skip over the last CR
	    also...

	* transports/smtp/smtp.c:
	    Support -F connection to  UNIX:/...  sockets.
	    This MUST be defined at the command line! No routing
	    controlled version allowed!  (security, you see..)
	    (This is subject to system having AF_UNIX support in
	     the first place, but that should be quite common...)

	* README.UPGRADING:
	    Change in what  sm  outputs for envelope meta-data to
	    be in line with other transport-agents... (mailbox,
	    in particular.)

	* transports/sm/sm.c:
	    Testing reveals... NULL pointer referrals :-(

	* libc/Makefile.in, libresolv/Makefile.in, router/Makefile.in,
	  router/libdb/Makefile.in, scheduler/Makefile.in,